Added functions to the SQLUtil interface
edited a little bit of the registration app GUI to make room for other changes
	- added a 'change username' field for the user
	- removed 'edit school name' and changed it to 'edit team name'

--- a/src/registration_app/user_table.ui
+++ b/src/registration_app/user_table.ui
@@ -63,7 +63,7 @@
     </item>
    </layout>
   </widget>
-  <widget class="QPushButton" name="edit_school_btn">
+  <widget class="QPushButton" name="edit_teamname_btn">
    <property name="geometry">
     <rect>
      <x>160</x>
@@ -73,7 +73,7 @@
     </rect>
    </property>
    <property name="text">
-    <string>Edit School Name</string>
+    <string>Edit Team Name</string>
    </property>
   </widget>
   <widget class="QWidget" name="formLayoutWidget_2">
