--- a/src/registration_app/user_edit.ui
+++ b/src/registration_app/user_edit.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>291</width>
-    <height>232</height>
+    <height>251</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,42 +19,52 @@
      <x>10</x>
      <y>90</y>
      <width>271</width>
-     <height>101</height>
+     <height>121</height>
     </rect>
    </property>
    <layout class="QFormLayout" name="formLayout_2">
     <property name="fieldGrowthPolicy">
      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
     </property>
-    <item row="2" column="0">
+    <item row="3" column="0">
      <widget class="QLabel" name="label_4">
       <property name="text">
        <string>First Name:</string>
       </property>
      </widget>
     </item>
-    <item row="2" column="1">
+    <item row="3" column="1">
      <widget class="QLineEdit" name="firstname_txt"/>
     </item>
-    <item row="3" column="0">
+    <item row="4" column="0">
      <widget class="QLabel" name="label_5">
       <property name="text">
        <string>Last name:</string>
       </property>
      </widget>
     </item>
-    <item row="3" column="1">
+    <item row="4" column="1">
      <widget class="QLineEdit" name="lastname_txt"/>
     </item>
-    <item row="4" column="0">
+    <item row="5" column="0">
      <widget class="QLabel" name="label_7">
       <property name="text">
        <string>Password:</string>
       </property>
      </widget>
     </item>
-    <item row="4" column="1">
+    <item row="5" column="1">
      <widget class="QLineEdit" name="password_txt"/>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLabel" name="label">
+      <property name="text">
+       <string>Username:</string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="1">
+     <widget class="QLineEdit" name="username_txt"/>
     </item>
    </layout>
   </widget>
@@ -118,8 +128,8 @@
   <widget class="QPushButton" name="save_userchange_btn">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>200</y>
+     <x>30</x>
+     <y>220</y>
      <width>101</width>
      <height>23</height>
     </rect>
@@ -131,8 +141,8 @@
   <widget class="QPushButton" name="backtouser_btn">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>200</y>
+     <x>190</x>
+     <y>220</y>
      <width>75</width>
      <height>23</height>
     </rect>
