--- a/src/question_editor/question_editor_v2.ui
+++ b/src/question_editor/question_editor_v2.ui
@@ -30,7 +30,7 @@
        </size>
       </property>
       <property name="currentIndex">
-       <number>0</number>
+       <number>3</number>
       </property>
       <widget class="QWidget" name="firstRound">
        <attribute name="title">
@@ -1444,8 +1444,11 @@
               </item>
               <item row="3" column="0">
                <widget class="QCheckBox" name="question_r4_ans_a">
+                <property name="layoutDirection">
+                 <enum>Qt::RightToLeft</enum>
+                </property>
                 <property name="text">
-                 <string>A.</string>
+                 <string>A</string>
                 </property>
                </widget>
               </item>
@@ -1454,8 +1457,11 @@
               </item>
               <item row="4" column="0">
                <widget class="QCheckBox" name="question_r4_ans_b">
+                <property name="layoutDirection">
+                 <enum>Qt::RightToLeft</enum>
+                </property>
                 <property name="text">
-                 <string>B.</string>
+                 <string>B</string>
                 </property>
                </widget>
               </item>
@@ -1464,8 +1470,11 @@
               </item>
               <item row="5" column="0">
                <widget class="QCheckBox" name="question_r4_ans_c">
+                <property name="layoutDirection">
+                 <enum>Qt::RightToLeft</enum>
+                </property>
                 <property name="text">
-                 <string>C.</string>
+                 <string>C</string>
                 </property>
                </widget>
               </item>
@@ -1474,20 +1483,16 @@
               </item>
               <item row="6" column="0">
                <widget class="QCheckBox" name="question_r4_ans_d">
+                <property name="layoutDirection">
+                 <enum>Qt::RightToLeft</enum>
+                </property>
                 <property name="text">
-                 <string>D.</string>
+                 <string>D</string>
                 </property>
                </widget>
               </item>
               <item row="6" column="1">
                <widget class="QLineEdit" name="question_r4_d"/>
-              </item>
-              <item row="7" column="0">
-               <widget class="QCheckBox" name="question_r4_ans_e">
-                <property name="text">
-                 <string>E.</string>
-                </property>
-               </widget>
               </item>
               <item row="7" column="1">
                <widget class="QLineEdit" name="question_r4_e"/>
@@ -1540,6 +1545,16 @@
                  </widget>
                 </item>
                </layout>
+              </item>
+              <item row="7" column="0">
+               <widget class="QCheckBox" name="question_r4_ans_e">
+                <property name="layoutDirection">
+                 <enum>Qt::RightToLeft</enum>
+                </property>
+                <property name="text">
+                 <string>E</string>
+                </property>
+               </widget>
               </item>
              </layout>
             </item>
