--- a/src/registration_app/team_table.ui
+++ b/src/registration_app/team_table.ui
@@ -6,91 +6,77 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>290</width>
-    <height>299</height>
+    <width>276</width>
+    <height>300</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Team View</string>
   </property>
-  <widget class="QWidget" name="formLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>11</x>
-     <y>10</y>
-     <width>271</width>
-     <height>91</height>
-    </rect>
-   </property>
-   <layout class="QFormLayout" name="formLayout">
-    <property name="fieldGrowthPolicy">
-     <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
-    </property>
-    <item row="1" column="1">
-     <widget class="QLineEdit" name="teamname_txt"/>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="teamnamelabel">
-      <property name="text">
-       <string>Team Name:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QLabel" name="teamschoollabel">
-      <property name="text">
-       <string>School:</string>
-      </property>
-     </widget>
-    </item>
-    <item row="2" column="1">
-     <widget class="QLineEdit" name="teamschool_txt"/>
-    </item>
-    <item row="3" column="1">
-     <widget class="QPushButton" name="add_team_btn">
-      <property name="text">
-       <string>Add Team</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QWidget" name="gridLayoutWidget">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>260</y>
-     <width>271</width>
-     <height>31</height>
-    </rect>
-   </property>
-   <layout class="QGridLayout" name="gridLayout">
-    <item row="0" column="0">
-     <widget class="QPushButton" name="team_edit_btn">
-      <property name="text">
-       <string>Edit Team</string>
-      </property>
-     </widget>
-    </item>
-    <item row="0" column="1">
-     <widget class="QPushButton" name="team_delete_btn">
-      <property name="text">
-       <string>Delete Team</string>
-      </property>
-     </widget>
-    </item>
-   </layout>
-  </widget>
-  <widget class="QListView" name="team_listview">
-   <property name="geometry">
-    <rect>
-     <x>10</x>
-     <y>110</y>
-     <width>271</width>
-     <height>141</height>
-    </rect>
-   </property>
-  </widget>
+  <layout class="QVBoxLayout" name="verticalLayout">
+   <item>
+    <layout class="QFormLayout" name="formLayout">
+     <property name="fieldGrowthPolicy">
+      <enum>QFormLayout::AllNonFixedFieldsGrow</enum>
+     </property>
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="teamname_txt"/>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="teamnamelabel">
+       <property name="text">
+        <string>Team Name:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="teamschoollabel">
+       <property name="text">
+        <string>School:</string>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="teamschool_txt"/>
+     </item>
+     <item row="3" column="1">
+      <widget class="QPushButton" name="add_team_btn">
+       <property name="text">
+        <string>Add Team</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
+    <widget class="QListView" name="team_listview">
+     <property name="minimumSize">
+      <size>
+       <width>268</width>
+       <height>158</height>
+      </size>
+     </property>
+    </widget>
+   </item>
+   <item>
+    <layout class="QGridLayout" name="gridLayout">
+     <item row="0" column="0">
+      <widget class="QPushButton" name="team_edit_btn">
+       <property name="text">
+        <string>Edit Team</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QPushButton" name="team_delete_btn">
+       <property name="text">
+        <string>Delete Team</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+  </layout>
  </widget>
  <resources/>
  <connections/>
