--- a/src/question_editor/question_editor_v2.ui
+++ b/src/question_editor/question_editor_v2.ui
@@ -6,14 +6,14 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>661</width>
-    <height>633</height>
+    <width>687</width>
+    <height>679</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>661</width>
-    <height>633</height>
+    <width>687</width>
+    <height>679</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -1065,7 +1065,7 @@
               <item row="3" column="1">
                <layout class="QHBoxLayout" name="horizontalLayout">
                 <item>
-                 <widget class="QRadioButton" name="radioButton">
+                 <widget class="QRadioButton" name="multi_r3">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -1078,7 +1078,7 @@
                  </widget>
                 </item>
                 <item>
-                 <widget class="QRadioButton" name="radioButton_2">
+                 <widget class="QRadioButton" name="iden_r3">
                   <property name="sizePolicy">
                    <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                     <horstretch>0</horstretch>
@@ -1511,7 +1511,7 @@
             <item row="4" column="1">
              <layout class="QHBoxLayout" name="horizontalLayout_7">
               <item>
-               <widget class="QRadioButton" name="radioButton_3">
+               <widget class="QRadioButton" name="multi_r4">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                   <horstretch>0</horstretch>
@@ -1524,7 +1524,7 @@
                </widget>
               </item>
               <item>
-               <widget class="QRadioButton" name="radioButton_4">
+               <widget class="QRadioButton" name="iden_r4">
                 <property name="sizePolicy">
                  <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
                   <horstretch>0</horstretch>
@@ -1667,7 +1667,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>661</width>
+     <width>687</width>
      <height>24</height>
     </rect>
    </property>
